20110626	Moving Dreamcast BIOS emulation entry points to 0x8c000100+ofs,
		so they are not "in the way" of the real BIOS' data area at
		0x8c000000-0x8c0000ff. Some other minor Dreamcast fixes.
		Moving GDROM DMA register handling into dev_dreamcast_gdrom.
		Fixing a bug in the SH4 fipr instruction (inner product): the
		rm and rn registers were reversed!
		Implementing fmov_rm_frn for double-sized register access.
20110702	dev_ram now has a "trace" flag. Useful for figuring out e.g.
		when/if a program accesses certain memory ranges.
		Continuing on Dreamcast PVR (graphics) emulation; implementing
		software triangle rendering, so that some demo programs (such
		as Comstedt's "tatest", KOS' "gltest.bin" and "dcfighting.bin")
		now render solid polygons. Color is random though, and no
		textures yet.
20110706	Implementing register pair variant of SuperH fmov_frm_rn,
		adding implementations of "LDS Rm,MACH", and "LDS Rm,MACL".
20110902	Reviving the old legacy Alpha CPU support, which was removed
		20090703 (i.e. NOT using the new framework).
20110906	Slowly continuing on the Alpha emulation mode: going through
		the existing virtual memory and PALcode stuff.
20120120	Avoid crash in cpu_ppc_instr_loadstore.cc for 64-bit emulation
		(since only 32-bit access is actually implemented); fallback
		to generic (slow) access.
		Minor OpenFirmware and SPR fixes to reach further with a
		FreeBSD/powerpc 9.0 kernel (-Xe g4).
		Updating the NetBSD/pmax install instructions: 5.1 -> 5.1.1.
		Updating the NetBSD/cobalt install instructions 5.0.1 to 5.1.1.
		Redirect PowerPC SPRs 0x10c/10d to 0x11c/11d (Time Base).
20120121	Updating OpenBSD/landisk installation instructions: 4.9 -> 5.0.
20120507	Adding a patch from Juli Mallett for MIPS rdhwr reg 29.
20120617	Adding a patch from James Peacock for ARM MSR fields.
20120724	Adding a patch from David Brownlee (mkstemp on NetBSD), and
		trying to make things build without warnings with GCC 4.6.x.
